[#5074] Added data transformation to list for Objects API and JSON dump

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -164,6 +164,11 @@
     "description": "Camunda complex process var 'type' label",
     "originalDefault": "Type"
   },
+  "2arYfH": {
+    "defaultMessage": "If enabled, the selected values are sent as an array of values instead of an object with a boolean value for each option.",
+    "description": "'Transform to list' checkbox help text",
+    "originalDefault": "If enabled, the selected values are sent as an array of values instead of an object with a boolean value for each option."
+  },
   "2boL55": {
     "defaultMessage": "Query parameters",
     "description": "Service fetch configuration modal form query parameters field label",
@@ -2653,6 +2658,11 @@
     "defaultMessage": "URL to the object type in the objecttypes API. If provided, an object will be created and a case object relation will be added to the case.",
     "description": "ZGW APIs registration options 'objecttype' help text",
     "originalDefault": "URL to the object type in the objecttypes API. If provided, an object will be created and a case object relation will be added to the case."
+  },
+  "m/NVtu": {
+    "defaultMessage": "Transform to list",
+    "description": "'Transform to list' checkbox label",
+    "originalDefault": "Transform to list"
   },
   "m83ECr": {
     "defaultMessage": "Copying the configuration from the registration backend will clear the existing configuration. Are you sure you want to continue?",
