--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -969,6 +969,11 @@
     "description": "static pricing mode label",
     "originalDefault": "Use linked product price"
   },
+  "Gi1Py0": {
+    "defaultMessage": "Additional scopes that should be used with the authentication, besides the bsn and/or kvk scopes.",
+    "description": "form.authenticationOidcPluginScopes help text",
+    "originalDefault": "Additional scopes that should be used with the authentication, besides the bsn and/or kvk scopes."
+  },
   "GjQdpb": {
     "defaultMessage": ", op locatie \"{location}\"",
     "description": "Formio configuration backend validation error location suffix",
@@ -1988,6 +1993,11 @@
     "description": "Form 'BRP Personen processing header value' field help text",
     "originalDefault": "The processing (\"verwerking\") for queries to the BRP Persoon API."
   },
+  "ZQaGsO": {
+    "defaultMessage": "Authentication scopes",
+    "description": "form.authenticationOidcPluginScopes label",
+    "originalDefault": "Authentication scopes"
+  },
   "ZSvQcR": {
     "defaultMessage": "TITLE-parameter",
     "description": "Ogone legacy payment options 'titleTemplate' label",
@@ -2915,6 +2925,11 @@
     "defaultMessage": "Dit sjabloon wordt geëvalueerd met de inzendingsgegevens wanneer de betaling ontvangen is. De resulterende JSON wordt naar de Objecten-API gestuurd om (de betaalattributen van) het eerder aangemaakte object bij te werken.",
     "description": "Legacy objects API registration options: 'paymentStatusUpdateJson' helpText",
     "originalDefault": "This template is evaluated with the submission data when the payment is received. The resulting JSON is sent to the objects API to update (the payment fields of) the earlier created object."
+  },
+  "qF8uxU": {
+    "defaultMessage": "Plugin: {plugin}",
+    "description": "Plugin name",
+    "originalDefault": "Plugin: {plugin}"
   },
   "qUYLVg": {
     "defaultMessage": "Product en betaling",
