:globe_with_meridians: [#5140] Added translations

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -1489,6 +1489,11 @@
     "description": "Manage process vars enabled checkbox column title",
     "originalDefault": "Enabled"
   },
+  "PN8vFa": {
+    "defaultMessage": "{plugin} plugin options",
+    "description": "Authentication plugin options configuration",
+    "originalDefault": "{plugin} plugin options"
+  },
   "PRNizF": {
     "defaultMessage": "Include confirmation page content in PDF",
     "description": "Include confirmation page content in PDF",
