:globe_with_meridians: [#5252] Update translations

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -569,11 +569,6 @@
     "description": "ZGW APIs registrations options: role type error",
     "originalDefault": "Something went wrong while retrieving the available role types defined in the selected case. Please check that the services in the selected API group are configured correctly."
   },
-  "AkG8Zu": {
-    "defaultMessage": "Plugin configuration: JSON",
-    "description": "JSON registration options modal title",
-    "originalDefault": "Plugin configuration: JSON"
-  },
   "AtBVAV": {
     "defaultMessage": "Confirm",
     "description": "Form definition select confirm button",
@@ -2918,6 +2913,11 @@
     "defaultMessage": "Export",
     "description": "Export form button",
     "originalDefault": "Export"
+  },
+  "qxmsAZ": {
+    "defaultMessage": "Plugin configuration: Generic JSON",
+    "description": "JSON registration options modal title",
+    "originalDefault": "Plugin configuration: Generic JSON"
   },
   "qzISfx": {
     "defaultMessage": "Step slug",
