--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -575,11 +575,6 @@
     "description": "ZGW APIs registrations options: role type error",
     "originalDefault": "Something went wrong while retrieving the available role types defined in the selected case. Please check that the services in the selected API group are configured correctly."
   },
-  "AkG8Zu": {
-    "defaultMessage": "Plugin configuratie: JSON",
-    "description": "JSON registration options modal title",
-    "originalDefault": "Plugin configuration: JSON"
-  },
   "AtBVAV": {
     "defaultMessage": "Bevestigen",
     "description": "Form definition select confirm button",
@@ -2940,6 +2935,11 @@
     "defaultMessage": "Exporteren",
     "description": "Export form button",
     "originalDefault": "Export"
+  },
+  "qxmsAZ": {
+    "defaultMessage": "Plugin configuration: Generic JSON",
+    "description": "JSON registration options modal title",
+    "originalDefault": "Plugin configuration: Generic JSON"
   },
   "qzISfx": {
     "defaultMessage": "URL-deel",
