--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -71,7 +71,7 @@
     "originalDefault": "DMN variable"
   },
   "0PhQl9": {
-    "defaultMessage": "If enabled, any deceased children will be displayed too.",
+    "defaultMessage": "Indien aangevinkt, dan worden overleden kinderen ook weergegeven.",
     "description": "Family members filters: include deceased helpText",
     "originalDefault": "If enabled, any deceased children will be displayed too."
   },
@@ -207,7 +207,7 @@
     "originalDefault": "The process definition for which to start a process instance."
   },
   "36qdVW": {
-    "defaultMessage": "The minimum age used to determine which children will be displayed. Leave blank to show all children.",
+    "defaultMessage": "De minimale leeftijd die wordt gebruikt om te bepalen welke kinderen worden weergegeven. Laat het veld leeg om alle kinderen weer te geven.",
     "description": "Family members filters: minimum age help text",
     "originalDefault": "The minimum age used to determine which children will be displayed. Leave blank to show all children."
   },
@@ -382,6 +382,7 @@
   "7Lk/+w": {
     "defaultMessage": "Type",
     "description": "Family members options: 'Type' label",
+    "isTranslated": true,
     "originalDefault": "Type"
   },
   "7RVZYq": {
@@ -1520,7 +1521,7 @@
     "originalDefault": "Enabled"
   },
   "PN8vFa": {
-    "defaultMessage": "{plugin} plugin options",
+    "defaultMessage": "{plugin} plugin-instellingen",
     "description": "Authentication plugin options configuration",
     "originalDefault": "{plugin} plugin options"
   },
@@ -1626,7 +1627,7 @@
     "originalDefault": "{viewMode, select, ui {Show JSON definition} json {Show editor} other {UNKNOWN}}"
   },
   "RGU2G5": {
-    "defaultMessage": "The data will be retrieved for the selected type of person.",
+    "defaultMessage": "De gegevens worden opgehaald voor het geselecteerde persoonstype.",
     "description": "Family members options: 'Type' helpText",
     "originalDefault": "The data will be retrieved for the selected type of person."
   },
@@ -1786,7 +1787,7 @@
     "originalDefault": "All Submissions Removal Limit"
   },
   "ULsbyd": {
-    "defaultMessage": "Include deceased",
+    "defaultMessage": "Inclusief overledenen",
     "description": "Family members filters: include deceased label",
     "originalDefault": "Include deceased"
   },
@@ -2024,7 +2025,7 @@
     "originalDefault": "Set the registration backend to use for the submission"
   },
   "ZfLhiZ": {
-    "defaultMessage": "Maximum age",
+    "defaultMessage": "Maximale leeftijd",
     "description": "Family members filters: maximum age field label",
     "originalDefault": "Maximum age"
   },
@@ -2506,7 +2507,7 @@
     "originalDefault": "Configure"
   },
   "huzndE": {
-    "defaultMessage": "Children",
+    "defaultMessage": "Kinderen",
     "description": "Label for children option",
     "originalDefault": "Children"
   },
@@ -2677,7 +2678,7 @@
     "originalDefault": "Subject of the email sent to the registration backend to notify a change in the payment status."
   },
   "kckipT": {
-    "defaultMessage": "Data destination form variable",
+    "defaultMessage": "Bestemmings-variabele",
     "description": "Family members options: accessible label for (form) variable dropdown",
     "originalDefault": "Data destination form variable"
   },
@@ -2757,7 +2758,7 @@
     "originalDefault": "Steps and fields"
   },
   "mWHMvR": {
-    "defaultMessage": "Data destination form variable",
+    "defaultMessage": "Bestemmings-variabele",
     "description": "Family members options: data destination form variable label",
     "originalDefault": "Data destination form variable"
   },
@@ -2969,6 +2970,7 @@
   "qUgKOB": {
     "defaultMessage": "Filters",
     "description": "Family members filters: fieldset title",
+    "isTranslated": true,
     "originalDefault": "Filters"
   },
   "qXbHf5": {
@@ -2992,7 +2994,7 @@
     "originalDefault": "Export"
   },
   "qxmsAZ": {
-    "defaultMessage": "Plugin configuration: Generic JSON",
+    "defaultMessage": "Plugin-instellingen: Generieke JSON",
     "description": "JSON registration options modal title",
     "originalDefault": "Plugin configuration: Generic JSON"
   },
@@ -3087,7 +3089,7 @@
     "originalDefault": "Enable to attach file uploads to the registration email. If set, this overrides the global default. Form designers should take special care to ensure that the total file upload sizes do not exceed the email size limit."
   },
   "sXz08G": {
-    "defaultMessage": "Minimum age",
+    "defaultMessage": "Minimale leeftijd",
     "description": "Family members filters: minimum age field label",
     "originalDefault": "Minimum age"
   },
@@ -3277,7 +3279,7 @@
     "originalDefault": "ID of the drive to use. If left empty, the default drive will be used."
   },
   "wowXBp": {
-    "defaultMessage": "The maximum age used to determine which children will be displayed. Leave blank to show all children.",
+    "defaultMessage": "De maximale leeftijd die wordt gebruikt om te bepalen welke kinderen worden weergegeven. Laat het veld leeg om alle kinderen weer te geven.",
     "description": "Family members filters: maximum age help text",
     "originalDefault": "The maximum age used to determine which children will be displayed. Leave blank to show all children."
   },
@@ -3359,6 +3361,7 @@
   "yTBZ6U": {
     "defaultMessage": "Partners",
     "description": "Label for partners option",
+    "isTranslated": true,
     "originalDefault": "Partners"
   },
   "yTfQNG": {
